@@ -1,6 +1,7 @@
 Working on 3.0.0 (new core)
 - use HTTPX again and forever ;-) (bye aiohttp)
 - "proxy" support too (can be really configurable, see proxies/httpx)
+- FIX: dual html -> dual status_code ;-) (not just the first)
 - EVOL: new option "--f" to force full output in html rendering
 - EVOL: the "resolving" mechanism is now completly new (more robust, more maintanable)
 - EVOL: some little behaviour has changed :
